# Motion-Planning-for-Mobile-Robots

./: README.md  docker-compose.yml
docker/: README.md  cpu.Dockerfile
docker/environment/: requirements.txt
docker/image/etc/supervisor/: supervisord.conf
hints/01-introduction/: README.md
hints/04-mapping-and-matching/: README.md
workspace/: README.md
workspace/assignments/: README.md
workspace/assignments/01-env-setup/: README.md
workspace/assignments/01-env-setup/MATLAB/: README.md
workspace/assignments/01-env-setup/ROS/: README.md
workspace/assignments/02-path-finding--search-based/: README.md
workspace/assignments/02-path-finding--search-based/MATLAB/: README.md  README.txt
workspace/assignments/02-path-finding--search-based/MATLAB/code/: A_star_search.m  main.m  obstacle_map.m
workspace/assignments/02-path-finding--search-based/MATLAB/doc/: README.md
workspace/assignments/02-path-finding--search-based/MATLAB/src/: visualize_map.m
workspace/assignments/02-path-finding--search-based/ROS/: .gitignore  README.md
workspace/assignments/02-path-finding--search-based/ROS/doc/: README.md
workspace/assignments/03-path-finding--sample-based/: README.md
workspace/assignments/03-path-finding--sample-based/MATLAB/: README.md  RRT.m  collisionChecking.m
workspace/assignments/03-path-finding--sample-based/MATLAB/doc/: README.md
workspace/assignments/03-path-finding--sample-based/MATLAB/src/: RRT.m
workspace/assignments/03-path-finding--sample-based/ROS/: README.md
workspace/assignments/03-path-finding--sample-based/ROS/doc/: README.md
workspace/assignments/04-trajectory-generation--intro/ROS/: README.md
workspace/assignments/04-trajectory-generation--obvp/: README.md
workspace/assignments/04-trajectory-generation--obvp/MATLAB/: README.md
workspace/assignments/04-trajectory-generation--obvp/ROS/: README.md
workspace/assignments/04-trajectory-generation--obvp/ROS/doc/: README.md
workspace/assignments/04-trajectory-generation--obvp/ROS/scripts/: get_optimal_cost_polynomial_params.py
workspace/assignments/05-trajectory-generation--minimum-snap/: README.md
workspace/assignments/05-trajectory-generation--minimum-snap/MATLAB/: README.md  getAbeq.m  getQ.m  hw1_1.m
workspace/assignments/05-trajectory-generation--minimum-snap/MATLAB/doc/: README.md
workspace/assignments/05-trajectory-generation--minimum-snap/MATLAB/src/: analyticSolver.m  getAbeq.m  getC.m  getCt.m  getM.m  getQ.m  numeric-solver.m
workspace/assignments/05-trajectory-generation--minimum-snap/ROS/: README.md
workspace/assignments/05-trajectory-generation--minimum-snap/ROS/src/waypoint_trajectory_generator/: CMakeLists.txt
workspace/assignments/05-trajectory-generation--minimum-snap/ROS/src/waypoint_trajectory_generator/cmake/: absl.cmake  eigen3.cmake  osqp.cmake
workspace/assignments/05-trajectory-generation--minimum-snap/ROS/src/waypoint_trajectory_generator/include/: osqp++.h  trajectory_generator_waypoint.h
workspace/assignments/05-trajectory-generation--minimum-snap/ROS/src/waypoint_trajectory_generator/launch/: test.launch
workspace/assignments/05-trajectory-generation--minimum-snap/ROS/src/waypoint_trajectory_generator/scripts/: publish_stop_waypoint.sh  publish_waypoints.sh
workspace/assignments/05-trajectory-generation--minimum-snap/ROS/src/waypoint_trajectory_generator/src/: osqp++.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
workspace/assignments/06-trajectory-generation--constraints/: README.md
workspace/assignments/06-trajectory-generation--constraints/MATLAB/: README.md  getAbeq.m  getAbieq.m  getM.m  hw6.m
workspace/assignments/06-trajectory-generation--constraints/MATLAB/doc/: README.md
workspace/assignments/06-trajectory-generation--constraints/MATLAB/src/: getAbeq.m  getAbieq.m  getM.m  getPM.m  getQ.m  getQM.m  numericSolver.m
workspace/assignments/06-trajectory-generation--constraints/ROS/: README.md
workspace/assignments/07-markov-decision-process/: README.md
workspace/assignments/07-markov-decision-process/Python/: README.md  graph_node.py  racetracks.py  real_time_dynamic_programming.py  value_iteration_dynamic_programming.py
workspace/assignments/07-markov-decision-process/Python/doc/: README.md
workspace/assignments/08-model-predictive-control/: README.md
workspace/assignments/08-model-predictive-control/MATLAB/: README.md
workspace/assignments/08-model-predictive-control/MATLAB/01-conical-spiral-tracking/: README.md  forward.m  getPredictionMatrix.m  linear_mpc.m  linear_mpc_hard_constraints.m  linear_mpc_soft_constraints.m  linear_mpc_tracking.m  xy_axis_mpc.m  z_axis_mpc.m
workspace/assignments/08-model-predictive-control/MATLAB/02-diff-drive-navigation/: README.md
workspace/assignments/08-model-predictive-control/MATLAB/02-nn-pso-control/: README.md
workspace/assignments/08-model-predictive-control/MATLAB/doc/: README.md
workspace/assignments/capstone/: README.md
workspace/assignments/capstone/ROS/: README.md
workspace/assignments/capstone/ROS/doc/: README.md
workspace/assignments/capstone/ROS/src/read_only/map_server/map_render/: CMakeLists.txt  package.xml
workspace/assignments/capstone/ROS/src/read_only/map_server/map_render/launch/: map_render.launch  point.rviz
workspace/assignments/capstone/ROS/src/read_only/map_server/map_render/src/: pcl_render_node.cpp
workspace/assignments/capstone/ROS/src/trajectory_generator/: CMakeLists.txt  package.xml
workspace/assignments/capstone/ROS/src/trajectory_generator/include/: Astar_searcher.h  RDP.hpp  path_finder.hpp  trajectory_generator_waypoint.h  trajectory_optimizer.hpp
workspace/assignments/capstone/ROS/src/trajectory_generator/launch/: demo.launch
workspace/assignments/capstone/ROS/src/trajectory_generator/launch/rviz_config/: demo.rviz
workspace/assignments/capstone/ROS/src/trajectory_generator/src/: Astar_searcher.cpp  osqp++.cpp  path_finder.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp  trajectory_optimizer.cpp
(+68 files in other folders)
